[package]
name = "shared_io_utils"
version = "0.0.4"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/shared_io_utils"
readme = "Readme.md"
description = "A utility to provide more convenient `Read` `Write` `Seek` `Debug` `Cursor` that could be shared, e.g. `SharedReader`, `SharedWriter`, `SharedReadWrite`, `DishonestReader` for modifying data using closures when being called `read()`, `CombinedReader` combines two readers but you can 'slice' the readers to make it only able to read parts of them, `CursorVecU8` have a better formatting behavior, `SharedCursor` shares a `CursorVecU8`, `MultistreamIO` allows you to switch its streams to read or write, `SharedMultistreamIO` shares the `MultistreamIO`. All of these 'shared' version are used for the 3rd party library to read/write and you can capture the data or modify the data."
keywords = ["IO", "shared", "reader", "writer"]

[dependencies]
savagestr = "^0"

[lib]
name = "io_utils"
path = "src/io_utils.rs"
